@@ -33,6 +33,33 @@
             <artifactId>gson</artifactId>
             <version>2.10</version>
         </dependency>
+        <!-- JSON support：org.json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version>
+        </dependency>
+
+        <!-- OkHttp dependency -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.9.2</version>
+        </dependency>
+
+        <!-- webcam-capture and slf4j -->
+        <dependency>
+            <groupId>com.github.sarxos</groupId>
+            <artifactId>webcam-capture</artifactId>
+            <version>0.3.12</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.19</version>
+        </dependency>
+
 
         <!-- JSON support：org.json -->
         <dependency>
@@ -88,6 +115,10 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>org.group35.Main</mainClass>
+                    <options>
+                        <option>--sun-misc-unsafe-memory-access=allow</option>
+                        <option>--enable-native-access=ALL-UNNAMED,javafx.graphics</option>
+                    </options>
                 </configuration>
             </plugin>
 
